grammar.js
        source_file: $ => repeat($._statement),

        _statement: $ => choice(
            $._expression_statement,
            $._declaration_statement
        ),

        table_item: $ => seq(
            optional($.visibility_modifier),
            'table',
            field('name', $._type_identifier),
            field('type_parameters', optional($.type_parameters)),
            field('body', $.table_field_declaration_list)
        ),

        table_field_declaration_list: $ => seq(
            '{',
            sepBy(',', seq(repeat($.attribute_item),
                           $.table_field_declaration)),
            optional(','),
            '}'
        ),

        table_field_declaration: $ => choice(
            $.field_declaration,
            $.table_functional_dependency
        ),

        table_functional_dependency: $ => seq(
            field('sources', choice(seq('(', sepBy1(',', $._field_identifier), ')'),
                                    $._field_identifier)),
            '->',
            field('targets', choice(seq('(', sepBy1(',', $._field_identifier), ')'),
                                    $._field_identifier)),
        ),

        field_declaration: $ => seq(
            optional($.visibility_modifier),
            field('name', $._field_identifier),
            ':',
            field('type', $._type)
        ),

        function_item: $ => seq(
            optional($.visibility_modifier),
            optional($.function_modifiers),
            'fn',
            field('name', $.identifier),
            field('type_parameters', optional($.type_parameters)),
            field('parameters', $.parameters),
            optional(seq('->', field('return_type', $._type))),
            field('body', $.block)
        ),

        query_item: $ => seq(
            optional($.visibility_modifier),
            optional($.function_modifiers),
            'query',
            field('name', seq($._type_identifier, '::', $.identifier)),
            field('type_parameters', optional($.type_parameters)),
            field('parameters', $.parameters),
            optional(seq('->', field('return_type', $._type))),
            field('body', $.block)
        ),

        primitive_types: $ => choice(/[iu][1-9][0-9]*/, 'bool', 'string'),

        parameters: $ => seq(
            '(',
            sepBy(',', seq(
                optional($.attribute_item),
                choice(
                    $.parameter,
                    $.self_parameter,
                    '_',
                ))),
            optional(','),
            ')'
        ),

        self_parameter: $ => seq(
            optional($.mutable_specifier),
            $.self
        ),

        parameter: $ => seq(
            optional($.mutable_specifier),
            field('pattern', choice(
                $._pattern,
                $.self,
                $._reserved_identifier,
            )),
            ':',
            field('type', $._type)
        ),

        _type: $ => choice(
            $.generic_type,
            $.scoped_type_identifier,
            $.tuple_type,
            $.unit_type,
            $.function_type,
            $.empty_type,
            $.primitive_types,
            $._type_identifier
        ),

        generic_type: $ => prec(1, seq(
            field('type', choice(
                $.rel,
                $._type_identifier,
                $.scoped_type_identifier
            )),
            field('type_arguments', $.type_arguments)
        )),

        type_arguments: $ => seq(
            token(prec(1, '<')),
            sepBy1(',', choice(
                $._type,
                $.type_binding,
                $._literal,
                $.block,
            )),
            optional(','),
            '>'
        ),

        _expression: $ => choice(
            $.unary_expression,
            $.binary_expression,
            $.assignment_expression,
            $.type_cast_expression,
            $.range_expression,
            $.call_expression,
            $.return_expression,
            $._literal,
            prec.left($.identifier),
            alias($.primitive_types, $.identifier),
            prec.left($._reserved_identifier),
            $.self,
            $.scoped_identifier,
            $.generic_function,
            $.field_expression,
            $.array_expression,
            $.tuple_expression,
            $.unit_expression,
            $._expression_ending_with_block,
            $.break_expression,
            $.continue_expression,
            $.index_expression,
            $.parenthesized_expression,
            $.struct_expression
        ),

        binary_expression: $ => {
            const table = [
                [PREC.and, '&&'],
                [PREC.or, '||'],
                [PREC.bitand, '&'],
                [PREC.bitor, '|'],
                [PREC.bitxor, '^'],
                [PREC.comparative, choice('==', '!=', '<', '<=', '>', '>=')],
                [PREC.shift, choice('<<', '>>')],
                [PREC.additive, choice('+', '-')],
                [PREC.multiplicative, choice('*', '/', '%')],
            ];

            return choice(...table.map(([precedence, operator]) => prec.left(precedence, seq(
                field('left', $._expression),
                field('operator', operator),
                field('right', $._expression),
            ))));
        },

        return_expression: $ => choice(
            prec.left(seq('return', $._expression)),
            prec(-1, 'return'),
        ),

        block: $ => seq(
            '{',
            repeat($._statement),
            optional($._expression),
            '}'
        ),

        // Section - Patterns

        _pattern: $ => choice(
            $._literal_pattern,
            alias($.primitive_types, $.identifier),
            $.identifier,
            $.tuple_pattern,
            $.tuple_struct_pattern,
            $.struct_pattern,
            $.remaining_field_pattern,
            '_'
        ),

        _literal: $ => choice(
            $.string_literal,
            $.char_literal,
            $.boolean_literal,
            $.integer_literal,
        ),

        identifier: $ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

        _reserved_identifier: $ => alias(choice(
            'query',
            'table'
        ), $.identifier),

        _type_identifier: $ => prec(1, alias($.identifier, $.type_identifier)),
        // /([^iu]|[iu][^1-9]|[iu][0-9]*[^0-9])[_\p{XID_Continue}]*/
        _field_identifier: $ => alias($.identifier, $.field_identifier),

        self: $ => 'self',
